# envparse

./: Cargo.toml  LICENSE-0BSD  LICENSE-MIT  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs  parse.rs  privat.rs
tests/: test.rs
uitests/compile-fail/: bool.rs
uitests/run-pass/: bools.rs  parse0.rs  range.rs  with-default.rs
